refactor: optimize LogCaptor by using Stream.toList() instead of Collectors.toList()